fix hamburger alignment

--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,7 @@ iframe,
 img,
 svg,
 video {
-  display: inline !important;
+  display: block;
   vertical-align: middle;
 }
 
@@ -152,6 +152,9 @@ textarea {
     pointer-events: auto;
     cursor: pointer;
     border-left: 1px solid var(--sir-black);
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .form-control {
@@ -195,6 +198,11 @@ textarea {
      right: 0;
      top: 70px;
      z-index: 99;
+     height: 30px;
+     width: 30px;
+     display: flex;
+     justify-content: center;
+     align-items: center;
    }
 
    .hamburger-open--active{
@@ -889,10 +897,10 @@ textarea {
  * Hide visually and from screen readers
  */
 
-.hidden,
+/* .hidden,
 [hidden] {
   display: none !important;
-}
+} */
 
 /*
  * Hide only visually, but have it available for screen readers:
